--- a/MilanaZhiganshina320_SR/Pages/GlavPage.xaml
+++ b/MilanaZhiganshina320_SR/Pages/GlavPage.xaml
@@ -35,7 +35,7 @@
                   Grid.Row="1"
                   Width="120"
                   Height="20"
-                  ItemsSource="{Binding pets}">
+                  ItemsSource="{Binding pets}" SelectionChanged="PolCB_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Name_pet}"/>
