--- a/MilanaZhiganshina320_SR/Pages/PlusFotoPage.xaml
+++ b/MilanaZhiganshina320_SR/Pages/PlusFotoPage.xaml
@@ -9,6 +9,87 @@
       Title="PlusFotoPage">
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Image Grid.RowSpan="8"
+               Grid.ColumnSpan="6"
+               Source="/img/foto_1.jpg"/>
+       
         
+        
+        <ComboBox x:Name="PolCB"
+                  Grid.Column="1"
+                  Grid.Row="3"
+                  Grid.ColumnSpan="2"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  Margin="10,8,0,0"
+                  Width="150"
+                  Height="40">
+            <ComboBoxItem Content="Котенок Ра"/>
+            <ComboBoxItem Content="Собачка Нуби"/>
+        </ComboBox>
+        <TextBlock  Text="Описание картинки"
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Margin="35 5 0 0"
+                    FontWeight="ExtraLight"
+                    FontSize="20"
+                    Width="200"
+                    Height="40"/>
+        <TextBox Grid.Column="1"
+                 Grid.Row="5"
+                 Grid.ColumnSpan="2"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"
+                 Margin="10 0 0 0"
+                 Width="150"
+                 Height="40"
+                 x:Name="LTB"
+                 />
+       
+        <Image x:Name="TestImg"
+               Grid.Row="1"
+               Grid.Column="3"
+               Grid.RowSpan="3"
+               Grid.ColumnSpan="3"/>
+        <Button x:Name="AddImgBtn"
+                Grid.Column="4"
+                Grid.Row="4"
+                Height="40"
+                Width="120"
+                Content="Добавить фото" 
+                FontWeight="Medium"
+                FontSize="15"
+                Background="Thistle" Click="AddImgBtn_Click"/>
+        <Button x:Name="RecordBT" 
+                Grid.Column="6"
+                Grid.ColumnSpan="2"
+                Grid.Row="7"
+                Content="Записать"
+                Margin="10"  
+                FontWeight="Medium"
+                FontSize="15"
+                Background="Thistle" Click="RecordBT_Click"/>
+
     </Grid>
 </Page>
